--- a/css/style.css
+++ b/css/style.css
@@ -9,9 +9,35 @@ html {
   box-sizing: border-box;
   font-size: 62.5%; }
 
+body {
+  font-family: "Open Sans", sans-serif; }
+
 .header {
-  height: 60rem;
+  height: 58rem;
   background: url("../img/first-bg.jpg"); }
+  .header__menu {
+    padding: 2rem 0; }
+  .header__intro {
+    width: 100%;
+    margin: 0 auto;
+    text-align: center; }
+    .header__intro--title {
+      font-size: 5.2rem;
+      font-weight: 200;
+      color: #fff; }
+    .header__intro--input {
+      width: 32.6rem;
+      height: 4rem;
+      outline: none;
+      border: 0; }
+    .header__intro--btn {
+      width: 12.1rem;
+      height: 4rem;
+      border-radius: 0;
+      background-color: #fd4f32;
+      text-transform: uppercase;
+      color: #fff;
+      transform: translate(-3px, -2px); }
 
 .hamburger span {
   background: #fff;
@@ -19,3 +45,35 @@ html {
   height: 2px;
   margin-bottom: 5px;
   width: 2.4rem; }
+
+.destinations {
+  height: 52.5rem;
+  background-color: #eeeeee; }
+  .destinations__title {
+    text-transform: uppercase;
+    font-size: 1.6rem;
+    font-weight: 400;
+    margin-top: 5.9rem;
+    font-family: "Montserrat", sans-serif; }
+  .destinations__text {
+    color: #8b8b8b;
+    font-size: 1.5rem;
+    margin-bottom: 3.8rem; }
+  .destinations__proposal {
+    background-color: #fff;
+    width: 100%;
+    border-bottom: 1px solid #e1e0d8; }
+    .destinations__proposal--image {
+      width: 26.3rem;
+      height: 20rem; }
+    .destinations__proposal--title {
+      font-family: "Montserrat", sans-serif;
+      font-size: 1.4rem;
+      font-weight: 400;
+      width: 100%;
+      width: 27rem;
+      padding: 2rem; }
+    .destinations__proposal--text {
+      font-size: 1.3rem;
+      color: #8b8b8b;
+      padding: 0 2rem 2rem 2rem; }
