--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -1,6 +1,39 @@
 .header {
-    height: 60rem;
+    height: 58rem;
     background: url('../img/first-bg.jpg');
+
+    &__menu {
+        padding: 2rem 0;
+    }
+
+    &__intro {
+        width: 100%;
+        margin: 0 auto;
+        text-align: center;
+
+        &--title {
+            font-size: 5.2rem;
+            font-weight: 200;
+            color: #fff;
+        }
+
+        &--input {
+            width: 32.6rem;
+            height: 4rem;
+            outline: none;
+            border: 0;
+        }
+
+        &--btn {
+            width: 12.1rem;
+            height: 4rem;
+            border-radius: 0;
+            background-color: #fd4f32;
+            text-transform: uppercase;
+            color: #fff;
+            transform: translate(-3px, -2px);
+        }
+    }
 }
 
 .hamburger {
