--- a/css/style.css
+++ b/css/style.css
@@ -24,7 +24,8 @@ body {
     .header__intro--title {
       font-size: 5.2rem;
       font-weight: 200;
-      color: #fff; }
+      color: #fff;
+      margin-bottom: 6rem; }
     .header__intro--input {
       width: 32.6rem;
       height: 4rem;
@@ -70,6 +71,7 @@ body {
       font-family: "Montserrat", sans-serif;
       font-size: 1.4rem;
       font-weight: 400;
+      text-transform: uppercase;
       width: 100%;
       width: 27rem;
       padding: 2rem; }
@@ -77,3 +79,20 @@ body {
       font-size: 1.3rem;
       color: #8b8b8b;
       padding: 0 2rem 2rem 2rem; }
+
+.details {
+  height: 38.3rem; }
+  .details__title {
+    font-size: 5.2rem;
+    font-weight: 200;
+    margin-top: 7rem; }
+  .details__main {
+    text-transform: uppercase;
+    font-size: 1.6rem;
+    font-weight: 400;
+    margin-top: 5.5rem; }
+  .details__text {
+    color: #8b8b8b;
+    font-size: 1.5rem;
+    width: 30rem;
+    margin-top: 2rem; }
