--- a/sass/_destinations.scss
+++ b/sass/_destinations.scss
@@ -31,6 +31,7 @@
             font-family: $font-secondary;
             font-size: 1.4rem;
             font-weight: 400;
+            text-transform: uppercase;
             width: 100%;
             width: 27rem;
             padding: 2rem;
