--- a/sass/_header.scss
+++ b/sass/_header.scss
@@ -15,6 +15,7 @@
             font-size: 5.2rem;
             font-weight: 200;
             color: #fff;
+            margin-bottom: 6rem;
         }
 
         &--input {
