--- a/css/style.css
+++ b/css/style.css
@@ -19,8 +19,9 @@ body {
     padding: 2rem 0; }
   .header__intro {
     width: 100%;
-    margin: 0 auto;
-    text-align: center; }
+    text-align: center;
+    position: relative;
+    padding-top: 10%; }
     .header__intro--title {
       font-size: 5.2rem;
       font-weight: 200;
@@ -30,7 +31,8 @@ body {
       width: 32.6rem;
       height: 4rem;
       outline: none;
-      border: 0; }
+      border: 0;
+      padding-left: 1.3rem; }
     .header__intro--btn {
       width: 12.1rem;
       height: 4rem;
@@ -39,6 +41,8 @@ body {
       text-transform: uppercase;
       color: #fff;
       transform: translate(-3px, -2px); }
+      .header__intro--btn:hover {
+        color: #fff; }
 
 .hamburger span {
   background: #fff;
